<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_depth_estimation_ai</name>
  <version>0.1.0</version>
  <description> A ROS 2 composable perception pipeline that integrates camera driver,
    image preprocessing, depth estimation, and point cloud projection into a modular component
    container for navigation use. </description>
  <maintainer email="vidyadharan98@gmail.com">Vidyadharan</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>depth_anything_v3</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>